# cpplearn

./: hello.cpp
1.Log_P20-P30/: CMakeLists.txt
1.Log_P20-P30/include/: Log.h
1.Log_P20-P30/src/: log.cpp  main.cpp
hello/: CMakeLists.txt  Log.cpp  Log.h  hello.cpp
note/: 1、C++简易编译原理.md  1、C++简易编译原理（P5-P7）.md  1、C++简易编译原理（待补充）.md  2、C++变量、函数、语句、头文件（P8-P17）.md  3、C++ 类（P18-P30）.md
